[ci skip] Deployed 799e666 with MkDocs version: 1.3.0

--- a/metrics/firefox_desktop/index.html
+++ b/metrics/firefox_desktop/index.html
@@ -5097,7 +5097,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(payload.processes.content.histograms.mouseup_followed_by_click_present_latency) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(payload.processes.gpu.histograms.mouseup_followed_by_click_present_latency) IGNORE NULLS)
 </code></pre>
 
 </details>
