[ci skip] Deployed 7410625 with MkDocs version: 1.3.0

--- a/metrics/fenix/index.html
+++ b/metrics/fenix/index.html
@@ -2312,7 +2312,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_load_time) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_load_time IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2326,7 +2326,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_load_time_responsestart) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_load_time_responsestart IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2340,7 +2340,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_req_anim_frame_callback) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_req_anim_frame_callback IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2354,7 +2354,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_dcl) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_dcl IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2368,7 +2368,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_dcl_responsestart) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_dcl_responsestart IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2382,7 +2382,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_fcp) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_fcp IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2396,7 +2396,7 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.performance_pageload_fcp_responsestart) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.performance_pageload_fcp_responsestart IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2412,7 +2412,7 @@ up</a>.</p>
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.perf_startup_cold_main_app_to_first_frame) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.perf_startup_cold_main_app_to_first_frame IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2428,7 +2428,7 @@ up</a>.</p>
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.timing_distribution.perf_startup_cold_view_app_to_first_frame) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.timing_distribution.perf_startup_cold_view_app_to_first_frame IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2443,7 +2443,7 @@ to be larger than download size.</p>
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.memory_distribution.storage_stats_app_bytes) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.memory_distribution.storage_stats_app_bytes IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2457,7 +2457,7 @@ to be larger than download size.</p>
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.memory_distribution.storage_stats_cache_bytes) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.memory_distribution.storage_stats_cache_bytes IGNORE NULLS)
 </code></pre>
 
 </details>
@@ -2471,7 +2471,7 @@ to be larger than download size.</p>
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">ARRAY_AGG(mozfun.hist.extract(metrics.memory_distribution.storage_stats_data_dir_bytes) IGNORE NULLS)
+<pre><code class="language-sql">ARRAY_AGG(metrics.memory_distribution.storage_stats_data_dir_bytes IGNORE NULLS)
 </code></pre>
 
 </details>
