--- a/default_configs/focus_android/index.html
+++ b/default_configs/focus_android/index.html
@@ -1859,7 +1859,7 @@
 <p><a href="https://github.com/mozilla/metric-hub/blob/main/defaults/focus_android.toml">Source</a>  |  <a href="https://github.com/mozilla/metric-hub/edit/main/defaults/focus_android.toml">Edit</a></p>
 <h3 id="metrics">Metrics</h3>
 <h4 id="retained"><code>retained</code></h4>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>daily</code>  </p>
+<p>Analysis Periods:  <code>daily</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
 <p>Statistics: <code>binomial</code></p>
 <details>
@@ -1909,7 +1909,7 @@
 <p>The number of days in an observation window that clients used the browser.</p>
 <p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>bootstrap_mean</code>, <code>empirical_cdf</code>, <code>deciles</code></p>
+<p>Statistics: <code>empirical_cdf</code>, <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
