[ci skip] Deployed 54ebba3 with MkDocs version: 1.3.0

--- a/default_configs/fenix/index.html
+++ b/default_configs/fenix/index.html
@@ -1929,7 +1929,7 @@
 <p><a href="https://github.com/mozilla/metric-hub/blob/main/defaults/fenix.toml">Source</a>  |  <a href="https://github.com/mozilla/metric-hub/edit/main/defaults/fenix.toml">Edit</a></p>
 <h3 id="metrics">Metrics</h3>
 <h4 id="retained"><code>retained</code></h4>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>daily</code>  </p>
+<p>Analysis Periods:  <code>daily</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
 <p>Statistics: <code>binomial</code></p>
 <details>
@@ -1945,9 +1945,9 @@
 <h4 id="days_of_use"><code>days_of_use</code></h4>
 <p><strong>Days of use</strong></p>
 <p>The number of days in an observation window that clients used the browser.</p>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
+<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>empirical_cdf</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>empirical_cdf</code>, <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1959,9 +1959,9 @@
 
 <hr />
 <h4 id="total_uri_count"><code>total_uri_count</code></h4>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
+<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#metrics"><code>metrics</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1975,7 +1975,7 @@
 <h4 id="tagged_sap_searches"><code>tagged_sap_searches</code></h4>
 <p>Analysis Periods:  <code>weekly</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1987,9 +1987,9 @@
 
 <hr />
 <h4 id="serp_ad_clicks"><code>serp_ad_clicks</code></h4>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
+<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2003,9 +2003,9 @@
 <h4 id="search_count"><code>search_count</code></h4>
 <p><strong>SAP search count</strong></p>
 <p>Number of searches performed through a Search Access Point.</p>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
+<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2017,9 +2017,9 @@
 
 <hr />
 <h4 id="active_hours"><code>active_hours</code></h4>
-<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
+<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2033,7 +2033,7 @@
 <h4 id="tagged_follow_on_searches"><code>tagged_follow_on_searches</code></h4>
 <p>Analysis Periods:  <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2047,7 +2047,7 @@
 <h4 id="searches_with_ads"><code>searches_with_ads</code></h4>
 <p>Analysis Periods:  <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2061,7 +2061,7 @@
 <h4 id="organic_searches"><code>organic_searches</code></h4>
 <p>Analysis Periods:  <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
