[ci skip] Deployed 832d37f with MkDocs version: 1.3.0

--- a/data_sources/firefox_ios/index.html
+++ b/data_sources/firefox_ios/index.html
@@ -1909,7 +1909,11 @@
 <summary>Definition:</summary>
 
 
-<pre><code class="language-sql">mozdata.search.mobile_search_clients_engines_sources_daily
+<pre><code class="language-sql">(
+    SELECT *
+    FROM `mozdata.search.mobile_search_clients_engines_sources_daily` 
+    WHERE os = &quot;iOS&quot; AND normalized_app_name = &quot;Fennec&quot;
+)
 </code></pre>
 
 </details>
