[ci skip] Deployed 49d37c4 with MkDocs version: 1.3.0

--- a/default_configs/fenix/index.html
+++ b/default_configs/fenix/index.html
@@ -1945,9 +1945,9 @@
 <h4 id="days_of_use"><code>days_of_use</code></h4>
 <p><strong>Days of use</strong></p>
 <p>The number of days in an observation window that clients used the browser.</p>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code>, <code>empirical_cdf</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code>, <code>empirical_cdf</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1959,9 +1959,9 @@
 
 <hr />
 <h4 id="total_uri_count"><code>total_uri_count</code></h4>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#metrics"><code>metrics</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1977,7 +1977,7 @@
 <p>Total number of tagged SAP searches. This metric is deprecated, use tagged_search_count instead</p>
 <p>Analysis Periods:  <code>weekly</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -1989,9 +1989,9 @@
 
 <hr />
 <h4 id="serp_ad_clicks"><code>serp_ad_clicks</code></h4>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2008,9 +2008,9 @@
 Search Access Points.
 Learn more in the
 <a href="https://docs.telemetry.mozilla.org/datasets/search.html">search data documentation</a>.</p>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2024,9 +2024,9 @@ Learn more in the
 <h4 id="active_hours"><code>active_hours</code></h4>
 <p><strong>Active Hours</strong></p>
 <p>Total time Firefox was active</p>
-<p>Analysis Periods:  <code>overall</code> ,   <code>weekly</code>  </p>
+<p>Analysis Periods:  <code>weekly</code> ,   <code>overall</code>  </p>
 <p>Data Source: <a href="#baseline"><code>baseline</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2040,7 +2040,7 @@ Learn more in the
 <h4 id="tagged_follow_on_searches"><code>tagged_follow_on_searches</code></h4>
 <p>Analysis Periods:  <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2054,7 +2054,7 @@ Learn more in the
 <h4 id="searches_with_ads"><code>searches_with_ads</code></h4>
 <p>Analysis Periods:  <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
@@ -2068,7 +2068,7 @@ Learn more in the
 <h4 id="organic_searches"><code>organic_searches</code></h4>
 <p>Analysis Periods:  <code>overall</code>  </p>
 <p>Data Source: <a href="#mobile_search_clients_engines_sources_daily"><code>mobile_search_clients_engines_sources_daily</code></a></p>
-<p>Statistics: <code>deciles</code>, <code>bootstrap_mean</code></p>
+<p>Statistics: <code>bootstrap_mean</code>, <code>deciles</code></p>
 <details>
 <summary>Definition:</summary>
 
